--- a/templates/inventory/inventory_master.html
+++ b/templates/inventory/inventory_master.html
@@ -86,6 +86,12 @@
                         {% endfor %}
                     </select>
                 </div>
+
+                 <div class="col-md-4 text-end">
+                    <a href="{{ url_for('category_master') }}" class="btn btn-outline-dark rounded-pill btn-sm">
+                        <i class="fa-solid fa-tags me-1"></i> Manage Categories
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -275,5 +281,6 @@
     .btn-light-hover:hover.text-info { color: #0dcaf0 !important; background: #e6fcff; }
 </style>
 {% endblock %}
+
 
 
