--- a/templates/expenses/expenses_list.html
+++ b/templates/expenses/expenses_list.html
@@ -157,7 +157,7 @@
         flatpickr("#expense_date", {
             dateFormat: "Y-m-d",
             altInput: true,
-            altFormat: "F j, Y",
+            altFormat: "j F, Y",
             defaultDate: "today",
             allowInput: true
         });
@@ -191,3 +191,4 @@
     });
 </script>
 {% endblock %}
+
