--- a/templates/emp_ledger.html
+++ b/templates/emp_ledger.html
@@ -269,7 +269,7 @@
         <div>
             <h2 class="fw-bold mb-1" style="font-size: 1.75rem;">{{ employee.name }}</h2>
             <p class="text-secondary mb-0 fw-medium">
-                {{ emp.position  }} 
+                {{ employee.position  }} 
                 <span class="mx-2 text-gray-300">•</span> 
                 {{ employee.phone }}
             </p>
@@ -469,4 +469,5 @@
     }
 </script>
 {% endblock %}
+
 
