--- a/templates/suppliers/add_manual_due.html
+++ b/templates/suppliers/add_manual_due.html
@@ -55,7 +55,7 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
     flatpickr("#date", {
-        dateFormat: "Y-m-d",
+        dateFormat: "d-m-Y",
         defaultDate: "today",
         allowInput: true
     });
