--- a/templates/emp_list.html
+++ b/templates/emp_list.html
@@ -234,7 +234,7 @@
             <!-- Advance -> Green Background -->
             <div class="kpi-card card-balance is-advance">
                 <div class="kpi-label">
-                    <i class="fa-solid fa-wallet"></i> Company Advance
+                    <i class="fa-solid fa-wallet"></i> Credit Balance
                 </div>
                 <div class="kpi-value">{{ stats.net_holding|abs|inr }}</div>
             </div>
@@ -326,3 +326,4 @@
     });
 </script>
 {% endblock %}
+
