--- a/templates/suppliers/supplier_ledger.html
+++ b/templates/suppliers/supplier_ledger.html
@@ -86,7 +86,7 @@
                         <tbody>
                             {% for pur in purchases %}
                             <tr>
-                                <td>{% if pur.purchase_date %}{{ pur.purchase_date.strftime('%d-%m-%Y') }}{% else %}-{% endif %}</td>
+                                <td>{{ pur.formatted_date }}</td>
                                 <td>{{ pur.bill_number }}</td>
                                 <td class="text-end fw-bold text-danger">{{ pur.total_amount|inr }}</td>
                                 <td class="text-center">
@@ -111,7 +111,7 @@
                         <tbody>
                             {% for adj in adjustments %}
                             <tr>
-                                <td>{% if adj.adjustment_date %}{{ adj.adjustment_date.strftime('%d-%m-%Y') }}{% else %}-{% endif %}</td>
+                                <td>{{ adj.formatted_date }}</td>
                                 <td>{{ adj.notes }}</td>
                                 <td class="text-end fw-bold text-danger">{{ adj.amount|inr }}</td>
                                 <td class="text-center">
@@ -140,7 +140,7 @@
                         <tbody>
                             {% for pay in payments %}
                             <tr>
-                                <td>{% if pay.payment_date %}{{ pay.payment_date.strftime('%d-%m-%Y') }}{% else %}-{% endif %}</td>
+                                <td>{{ pay.formatted_date }}</td>
                                 <td><span class="badge bg-success bg-opacity-10 text-success border border-success-subtle">{{ pay.payment_mode }}</span></td>
                                 <td class="text-end fw-bold text-success">- {{ pay.amount_paid|inr }}</td>
                                 <td class="text-center">
